...
          height: SEND_HEIGHT + insets.bottom,
          paddingBottom: insets.bottom,
        },
      ]}
    >
      <Input
        testID="chat-input"
        value={message}
        onChangeText={setMessage}
        onSubmitEditing={handleSubmit}
        returnKeyType="send"
        autoCapitalize="none"
        enablesReturnKeyAutomatically
...
