...
    scrollRef.current?.flashScrollIndicators();
  });

  const tabBarHeight = useBottomTabBarHeight();

  return (
    <View testID="profile-screen" style={styles.container}>
      {isFocused ? <StatusBar style="light" /> : null}
      <View style={styles.backgroundProfileContainer}>
        <Animated.View style={imgStyle}>
          <UserDogProfileHeader />
        </Animated.View>
        <Animated.View style={[styles.backgroundOverlay, overlayStyle]} />
...
            ]}
          >
            <LocationConfig />
            <CurrentPlanConfig />

            <Config.Root
              testID="profile-open-preferences"
              onPress={() => router.push(SceneName.Preferences)}
            >
              <Filters width={22} height={22} fill={theme.colors.text} />
              <Config.Container>
                <Config.Title>{t("profile.matchPreferences")}</Config.Title>
                <Config.Description>
...
